made it so contacts array is populated in a service so that it can be passed between components

--- a/src/app/contact-list/contact-list.component.html
+++ b/src/app/contact-list/contact-list.component.html
@@ -1,6 +1,6 @@
 <h1 class="header">Address Book</h1>
 
-<table mat-table [dataSource]="contacts">
+<table mat-table [dataSource]="dataSource">
 
   <!-- First Name Column -->
   <ng-container matColumnDef="firstName">
