--- a/src/app/contact-list/contact-list.component.css
+++ b/src/app/contact-list/contact-list.component.css
@@ -4,7 +4,7 @@
 }
 
 .header {
-  font-size: 32px;
+  font-size: 250%;
   text-align: center;
   margin-bottom: 30px;
   border-bottom: 1px solid #C0C0C0;
@@ -18,7 +18,7 @@
 
 .bold-header {
   font-weight: bold;
-  font-size: 100%;
+  font-size: 110%;
 }
 
 .center-content {
@@ -28,4 +28,8 @@
 
 .name-align{
   align-self: center;
+}
+
+td{
+  font-size: 125%;
 }
